2012-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Recovery/Planner.pm (make_plan_from_filelist): Use the
	  changer inventory to try to use an already available dump.
	* server-src/amidxtaped.pl: Pass the changer to make_plan.

2012-05-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c, device-src/s3.c: Fix for pragma and gcc-4.5.2.

2012-05-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm (FAILED): Do it correctly.

2012-05-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Improve output on taper error.

2012-05-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm (FAILED): Ignore if dump is already
	  cancelled.

2012-05-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/event.c: Improve debugging.
	* server-src/dumper.c: Close data output in stop_dump.

2012-05-11  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/progs.m4: Define AMANDA_PROG_NC, set NC, NC6 and
	  NETCAT.
	* configure.in: use AMANDA_PROG_NC.
	* installcheck/Amanda_Device.pl: Use them.
	* perl/Amanda/Constants.pm.in: Add NC, NC6 and NETCAT.

2012-05-10 Dan Locks <dwlocks@zmanda.com>
	* configure.in: update AC_INIT usage, specify tar-ustar and minimum
	  automake version.
	* config/amanda/version.m4: create new AMANDA_INIT_VERSION macro to
	  read FULL_VERSION or VERSION before AC_INIT.

2012-05-10 Dan Locks <dwlocks@zmanda.com>
	* Makefile.am: update required automake version

2012-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Device.pl: sleep to allow other process the time
          to start listening.

2012-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amflock.c, common-src/match.c, common-src/util.c,
	  device-src/s3.c: Fix for deprecated G_STATIC_MUTEX_INIT.

2012-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Device.pl: Fix indirect tcp.
